# deepwordle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.txt  dead_letters.cpp  dead_letters.h  deep_solver.cpp  deep_solver.h  greedy_solver.cpp  greedy_solver.h  response.cpp  response.h  solveInFive.cpp  static_solutions.txt  words_handler.cpp  xen_solver.cpp
code/: base_solver.cpp  base_solver.h  ctpl_stl.h  dead_letters.cpp  dead_letters.h  dead_letters_tests.cpp  deep_solver.cpp  deep_solver.h  response.cpp  response.h  semi_static_solver.cpp  semi_static_solver.h  solveInFive.cpp  static_solver.cpp  static_solver.h  utils.cpp  utils.h  words_handler.cpp  words_handler.h  xen_solver.h
scripts/: predict_time.py  word_divider.py
src/: dead_letters.h  dead_letters_tests.cpp  response.h  semi_static_solver.cpp  static_solver.cpp  words_handler.cpp  words_handler.h
